k8s/Traefik/traefik-auth-secret.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-auth
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-dashboard-auth
    # Esto fuerza al navegador a mostrar un mensaje nuevo
    realm: "Traefik Access"
