k8s/Traefik/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.137.131.164.217.sslip.io`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      #middlewares:
      #  - name: whitelist-segura
      #   namespace: traefik
  tls:
    secretName: traefik-dashboard-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whitelist-segura
  namespace: traefik
spec:
  ipAllowList:
    sourceRange:
      - 127.0.0.1/32
      - 149.50.197.186/32
      - 10.0.0.0/8
    ipStrategy:
      depth: 1
